<resources>
    <string name="app_name">ABS Workout</string>

    <!--IMG description-->
    <string name="block">Block</string>
    <string name="redblock">RedBlock</string>
    <string name="play_button">play button</string>
    <string name="stop_button">stop button</string>

    <!--exercises-->
    <string name="exercise_1">Exercise 1</string>
    <string name="exercise_2">Exercise 2</string>
    <string name="exercise_3">Exercise 3</string>
    <string name="exercise_4">Exercise 4</string>
    <string name="exercise_5">Exercise 5</string>
    <string name="exercise_6">Exercise 6</string>

    <!--exercises names-->
    <string name="upper">Crunches</string>
    <string name="lower">Leg raises</string>
    <string name="six_pack">Flutter kicks</string>
    <string name="plank">Elbow plank</string>
    <string name="plank_c">Plank crunches</string>
    <string name="obliques">Toe taps</string>

    <!--Other staff-->
    <string name="time">01:00</string>
    <string name="text">Good morning, athlete!</string>

</resources>