<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30sp"
    tools:context=".MainActivity">

            <!--Block-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:id="@+id/block1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_gravity="center"
                android:layout_marginVertical="10sp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/redblock"
                    android:src="@drawable/ic_training"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="78dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="7dp"
                    android:contentDescription="@string/redblock"
                    android:src="@drawable/ic_white_block"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/exercise_1"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/upper"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--Block-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/block2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/block1"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginVertical="10sp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/redblock"
                    android:src="@drawable/ic_training"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="78dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="7dp"
                    android:contentDescription="@string/redblock"
                    android:src="@drawable/ic_white_block"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/exercise_2"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/lower"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView3" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--Block-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/block3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/block2"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginVertical="10sp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/redblock"
                    android:src="@drawable/ic_training"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="78dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="7dp"
                    android:contentDescription="@string/redblock"
                    android:src="@drawable/ic_white_block"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/exercise_3"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/six_pack"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView4" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--Block-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/block4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/block3"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginVertical="10sp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/redblock"
                    android:src="@drawable/ic_training"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="78dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="7dp"
                    android:contentDescription="@string/redblock"
                    android:src="@drawable/ic_white_block"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/exercise_4"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/plank"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--Block-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/block5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/block4"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginVertical="10sp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/redblock"
                    android:src="@drawable/ic_training"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="78dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="7dp"
                    android:contentDescription="@string/redblock"
                    android:src="@drawable/ic_white_block"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/exercise_5"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/obliques"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView6" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--Block-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/block6"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/block5"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginVertical="10sp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/redblock"
                    android:src="@drawable/ic_training"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="78dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="7dp"
                    android:contentDescription="@string/redblock"
                    android:src="@drawable/ic_white_block"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/exercise_6"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7sp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/plank_c"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView7" />
            </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>